Bug 485086 - Night light connects to location.services.mozilla.com when it should not connect.
Summary: Night light connects to location.services.mozilla.com when it should not conn...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Brightness and Color widget (other bugs)
Version First Reported In: 6.0.3
Platform: Arch Linux Linux
: NOR major
Target Milestone: 1.0
Assignee: Natalie Clarius
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-05 14:55 UTC by gigastarcraft2
Modified: 2024-04-22 22:36 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gigastarcraft2 2024-04-05 14:55:59 UTC
SUMMARY
Privacy issue.

STEPS TO REPRODUCE
1.  Turn Night Light on and select custom times or a manual location.
2. kded6 connects to location.services.mozilla.com at startup
3. 

OBSERVED RESULT
kded6 should not connect to location.services.mozilla.com when custom times or a manual location is set.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.8.2
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.3

ADDITIONAL INFORMATION
Comment 1 Natalie Clarius 2024-04-05 15:15:25 UTC
Are  you sure this comes from Night Light? Are you using any other feature that accesses location, such as the weather widget?
Comment 2 gigastarcraft2 2024-04-05 17:58:24 UTC
(In reply to Natalie Clarius from comment #1)
> Are  you sure this comes from Night Light? Are you using any other feature
> that accesses location, such as the weather widget?

Yes, I have checked with Night Light disabled and there was no kded6 connection at a startup.
Comment 3 Natalie Clarius 2024-04-07 03:57:26 UTC
What exactly do you mean when you say "kded6 connects to location.services.mozilla.com at startup"? If the service has a checkbox in the Background Services view that just means it checks at each startup with the Night Light configuration whether location updates are needed; this does not mean it actually connects to the Mozilla Location service. That would only be the case if it is reported as "Running". What does it say?
Comment 4 gigastarcraft2 2024-04-07 14:21:06 UTC
(In reply to Natalie Clarius from comment #3)
> What exactly do you mean when you say "kded6 connects to
> location.services.mozilla.com at startup"? If the service has a checkbox in
> the Background Services view that just means it checks at each startup with
> the Night Light configuration whether location updates are needed; this does
> not mean it actually connects to the Mozilla Location service. That would
> only be the case if it is reported as "Running". What does it say?

"Automatic Location for Night color" is not running as I have set manual or custom times but it still connects to the internet at startup. 
When I run Portmaster I have a path/usr/bin/kded6 connecting to Domain: location.services.mozilla.com. Protocol TCP, Remote Peer: 52.41.233.141, so it obvious it connects to the internet when it should not connect.
Comment 5 Natalie Clarius 2024-04-08 20:48:11 UTC
Ah sorry, I had misunderstood. 
Hm, I can't reproduce this, though I'm not seeing a network connection on startup with Automatic Location enabled either, only when opening the system settings.  
I'll see if I can find where something might go wrong in the cod.e
Comment 6 Bug Janitor Service 2024-04-09 00:38:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4225
Comment 7 Natalie Clarius 2024-04-09 03:33:09 UTC
Ugh, looks like the bug has been silently sitting there for a while. Thanks for finding it!
Comment 8 Natalie Clarius 2024-04-09 23:54:06 UTC
Git commit 3822e3eb04b9bbbdf1e6762454070b896dc99a06 by Natalie Clarius.
Committed on 09/04/2024 at 23:24.
Pushed by nclarius into branch 'master'.

libcolorcorrect: fix reading auto location enabled from config

Reading the 'Mode' config key into an int instead of string returned 0, which was interpreted as auto location mode, and resulted in the locator always being started even when the user had not chosen auto location.

Also explicitly check for the NightColor Active config, to future proof it in case colorcorrect gets other uses such as adjusting screen gamma that can be running independently of Night Light being enabled.

FIXED-IN: 6.0.4

M  +3    -2    libcolorcorrect/kded/locationupdater.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/3822e3eb04b9bbbdf1e6762454070b896dc99a06
Comment 9 Natalie Clarius 2024-04-10 00:12:01 UTC
Git commit d3985a5f7ec88f60e9efeac7bfed38dae11e2db5 by Natalie Clarius.
Committed on 09/04/2024 at 23:58.
Pushed by nclarius into branch 'Plasma/6.0'.

libcolorcorrect: fix reading auto location enabled from config

Reading the 'Mode' config key into an int instead of string returned 0, which was interpreted as auto location mode, and resulted in the locator always being started even when the user had not chosen auto location.

Also explicitly check for the NightColor Active config, to future proof it in case colorcorrect gets other uses such as adjusting screen gamma that can be running independently of Night Light being enabled.

FIXED-IN: 6.0.4


(cherry picked from commit 3822e3eb04b9bbbdf1e6762454070b896dc99a06)

M  +3    -2    libcolorcorrect/kded/locationupdater.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/d3985a5f7ec88f60e9efeac7bfed38dae11e2db5
Comment 10 gigastarcraft2 2024-04-10 08:15:30 UTC
(In reply to Natalie Clarius from comment #9)
> Git commit d3985a5f7ec88f60e9efeac7bfed38dae11e2db5 by Natalie Clarius.
> Committed on 09/04/2024 at 23:58.
> Pushed by nclarius into branch 'Plasma/6.0'.
> 
> libcolorcorrect: fix reading auto location enabled from config
> 
> Reading the 'Mode' config key into an int instead of string returned 0,
> which was interpreted as auto location mode, and resulted in the locator
> always being started even when the user had not chosen auto location.
> 
> Also explicitly check for the NightColor Active config, to future proof it
> in case colorcorrect gets other uses such as adjusting screen gamma that can
> be running independently of Night Light being enabled.
> 
> FIXED-IN: 6.0.4
> 
> 
> (cherry picked from commit 3822e3eb04b9bbbdf1e6762454070b896dc99a06)
> 
> M  +3    -2    libcolorcorrect/kded/locationupdater.cpp
> 
> https://invent.kde.org/plasma/plasma-workspace/-/commit/
> d3985a5f7ec88f60e9efeac7bfed38dae11e2db5

Thanks!
Comment 11 Natalie Clarius 2024-04-22 22:36:26 UTC
Git commit ed8e8fd95a9420a2fe45fc3d65b25bed7772044b by Natalie Clarius.
Committed on 22/04/2024 at 14:39.
Pushed by nclarius into branch 'Plasma/5.27'.

libcolorcorrect: fix reading auto location enabled from config

Reading the 'Mode' config key into an int instead of string returned 0, which was interpreted as auto location mode, and resulted in the locator always being started even when the user had not chosen auto location.

Also explicitly check for the NightColor Active config, to future proof it in case colorcorrect gets other uses such as adjusting screen gamma that can be running independently of Night Light being enabled.

FIXED-IN: 6.0.4


(cherry picked from commit 3822e3eb04b9bbbdf1e6762454070b896dc99a06)

M  +3    -2    libcolorcorrect/kded/locationupdater.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/ed8e8fd95a9420a2fe45fc3d65b25bed7772044b